--- a/ui/rotkelchen.css
+++ b/ui/rotkelchen.css
@@ -34,3 +34,15 @@ body.loading {
 body.loading .loadingwrapper {
     display: block;
 }
+
+.exchange-icon {
+    filter: grayscale(100%);
+    width: 50px;
+    height: 50px;
+}
+
+.exchange-icon-inverted {
+    filter: grayscale(100%) invert(100%);
+    width: 50px;
+    height: 50px;
+}
