--- a/ui/rotkelchen.css
+++ b/ui/rotkelchen.css
@@ -46,3 +46,11 @@ body.loading .loadingwrapper {
     width: 50px;
     height: 50px;
 }
+
+td.details-control {
+    background: url('images/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('images/details_close.png') no-repeat center center;
+}
