--- a/ui/rotkelchen.css
+++ b/ui/rotkelchen.css
@@ -48,9 +48,11 @@ body.loading .loadingwrapper {
 }
 
 td.details-control {
-    background: url('images/details_open.png') no-repeat center center;
+    text-align:center;
+    color:forestgreen;
     cursor: pointer;
 }
 tr.shown td.details-control {
-    background: url('images/details_close.png') no-repeat center center;
+    text-align:center;
+    color:red;
 }
