Improve Initial User Experience
- When logging in for the first time you will now have some of the buttons
  highlighted to guide you towards adding accounts and integrating with
  exchanges.

- Fixed lots of bugs to adding accounts to an initial state

--- a/ui/css/rotkelchen.css
+++ b/ui/css/rotkelchen.css
@@ -34,6 +34,7 @@
   transform: translate(-50%, -50%);
 }​
 
+html.wait, html.wait * { cursor: wait !important; }
 
 /* no scrollbar allowed in the body -- only content scrolls*/
 body {
