Adds the test environment setup

--- a/ui/css/rotkehlchen.css
+++ b/ui/css/rotkehlchen.css
@@ -155,3 +155,12 @@ a:focus, a:hover {
     float: left;
     margin-left:120px;
 }
+
+.no-animations {
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    -webkit-animation: none !important;
+    animation: none !important;
+}
