--- a/ui/css/rotkehlchen.css
+++ b/ui/css/rotkehlchen.css
@@ -33,6 +33,7 @@
   /* bring your own prefixes */
   transform: translate(-50%, -50%);
 }​
+}
 
 html.wait, html.wait * { cursor: wait !important; }
 
