Add a progress bar during the tax report generation
Fix #222

--- a/ui/css/rotkehlchen.css
+++ b/ui/css/rotkehlchen.css
@@ -1,23 +1,4 @@
-/* Start by setting display:none to make this hidden.
-   Then we position it in relation to the viewport window
-   with position:fixed. Width, height, top and left speak
-   for themselves. Background we set to 80% white with
-   our animation centered, and no-repeating */
 .loadingwrapper {
-    display:    none;
-    position:   fixed;
-    z-index:    1000;
-    top:        0;
-    left:       0;
-    height:     100%;
-    width:      100%;
-    background: rgba( 255, 255, 255, .8 )
-                url('../images/loading-circle.gif')
-                50% 50%
-                no-repeat;
-}
-
-.loadingtest {
     z-index:    1000;
     height: 100px;
     background: rgba( 255, 255, 255, .8 )
@@ -27,12 +8,7 @@
 }
 
 .loadingwrapper_text {
-  position: fixed; /* or absolute */
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);
-}​
+  text-align: center;
 }
 
 html.wait, html.wait * { cursor: wait !important; }
@@ -47,7 +23,7 @@ body {
     overflow: auto;
 }
 
-body.loading .loadingwrapper {
+body.loading {
     display: block;
 }
 
