--- a/ui/css/rotkehlchen.css
+++ b/ui/css/rotkehlchen.css
@@ -1,17 +1,16 @@
 .loadingwrapper {
-    z-index:    1000;
+    z-index: 1000;
     height: 100px;
-    background: rgba( 255, 255, 255, .8 )
-                url('../images/loading-circle.gif')
-                50% 50%
-                no-repeat;
+    background: rgba(255, 255, 255, .8) url('../images/loading-circle.gif') 50% 50% no-repeat;
 }
 
 .loadingwrapper_text {
-  text-align: center;
+    text-align: center;
 }
 
-html.wait, html.wait * { cursor: wait !important; }
+html.wait, html.wait * {
+    cursor: wait !important;
+}
 
 /* no scrollbar allowed in the body -- only content scrolls*/
 body {
@@ -19,7 +18,7 @@ body {
 }
 
 #page-wrapper {
-    height:964px;
+    height: 964px;
     overflow: auto;
 }
 
@@ -40,13 +39,14 @@ body.loading {
 }
 
 td.details-control {
-    text-align:center;
-    color:forestgreen;
+    text-align: center;
+    color: forestgreen;
     cursor: pointer;
 }
+
 tr.shown td.details-control {
-    text-align:center;
-    color:red;
+    text-align: center;
+    color: red;
 }
 
 label.form-prompt {
@@ -67,7 +67,7 @@ div.rotkehlchen-table {
 }
 
 div.invisible-anchor {
-    display:none;
+    display: none;
 }
 
 #rotkehlchen_no_text {
@@ -86,7 +86,7 @@ div.invisible-anchor {
     --notification-background: #eeeeee;
 }
 
-a>.fa-fw , a{
+a > .fa-fw, a {
     color: var(--elements-bg-color);
 }
 
@@ -98,7 +98,7 @@ a:focus, a:hover {
     border-color: var(--elements-bg-color);
 }
 
-.panel-primary>.panel-heading {
+.panel-primary > .panel-heading {
     background-color: var(--elements-bg-color);
     border-color: var(--elements-link-color);
 }
@@ -108,30 +108,49 @@ a:focus, a:hover {
     text-align: center;
     line-height: 1.9;
     font-size: 16px;
-    text-shadow: 0.1px 0.1 px var(--elements-link-color);
+    text-shadow: 0.1px 0.1px var(--elements-link-color);
     color: var(--elements-bg-color);
 }
 
 /* Dropdown Eth Status (Hidden by Default) */
-.dropdown-eth-status { min-width: 290px; }
-.eth-node-status { padding:0; }
-.eth-node-status:hover .dropdown-eth-status {display: block;}
-
-.dropdown-balance-save-status { min-width: 210px; }
-.balance-save-status { padding: 0; }
-.balance-save-status:hover .dropdown-balance-save-status { display: block; }
-
-.lg-status-icons {
-    float:left;
-    padding:14px 30px 14px 0px;
-    margin-bottom:0px;
+.dropdown-eth-status {
+    min-width: 290px;
 }
 
-.lg-status-icons > li > ul > p { text-align:center; padding: 0px 5px 0px 5px; }
+.eth-node-status {
+    padding: 0;
+}
+
+.eth-node-status:hover .dropdown-eth-status {
+    display: block;
+}
+
+.dropdown-balance-save-status {
+    min-width: 210px;
+}
+
+.balance-save-status {
+    padding: 0;
+}
+
+.balance-save-status:hover .dropdown-balance-save-status {
+    display: block;
+}
+
+.lg-status-icons {
+    float: left;
+    padding: 14px 30px 14px 0px;
+    margin-bottom: 0px;
+}
+
+.lg-status-icons > li > ul > p {
+    text-align: center;
+    padding: 0px 5px 0px 5px;
+}
 
 .navbar-status-icons {
     float: left;
-    margin-left:120px;
+    margin-left: 120px;
 }
 
 .no-animations {
@@ -155,18 +174,18 @@ a:focus, a:hover {
 }
 
 .notification-area {
-    width:340px;
-    height:300px;
+    width: 340px;
+    height: 300px;
     background: var(--notification-background);
     overflow-y: scroll;
     overflow-x: hidden;
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 1rem;
     line-height: 1.75rem;
     font-weight: 400;
     letter-spacing: .009375em;
     list-style-type: none;
-    color: rgba(0,0,0,.87);
+    color: rgba(0, 0, 0, .87);
 }
 
 .title {
@@ -179,7 +198,7 @@ a:focus, a:hover {
     padding: 4px 8px;
     word-wrap: break-word;
     font-size: 1.3rem;
-    color: rgba(0,0,0,.56)
+    color: rgba(0, 0, 0, .56)
 }
 
 .card {
@@ -193,8 +212,8 @@ a:focus, a:hover {
 }
 
 .card-1 {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .notification {
@@ -236,13 +255,216 @@ a:focus, a:hover {
     align-items: center;
     justify-content: center;
     font-size: 2rem;
-    color: rgba(0,0,0, .57);
+    color: rgba(0, 0, 0, .57);
 }
 
 .no-notifications p {
     margin-top: 8px;
 }
 
-#notification-messages  {
+#notification-messages {
     background-color: var(--notification-background) !important;
+}
+
+.fa-1x {
+    font-size: 1.5em;
+}
+[data-tooltip],
+.tooltip {
+    position: relative;
+    cursor: pointer;
+}
+
+/* Base styles for the entire tooltip */
+[data-tooltip]:before,
+[data-tooltip]:after,
+.tooltip:before,
+.tooltip:after {
+    position: absolute;
+    visibility: hidden;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+    -webkit-transition:
+            opacity 0.2s ease-in-out,
+            visibility 0.2s ease-in-out,
+            -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    -moz-transition:
+            opacity 0.2s ease-in-out,
+            visibility 0.2s ease-in-out,
+            -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    transition:
+            opacity 0.2s ease-in-out,
+            visibility 0.2s ease-in-out,
+            transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform:    translate3d(0, 0, 0);
+    transform:         translate3d(0, 0, 0);
+    pointer-events: none;
+}
+
+/* Show the entire tooltip on hover and focus */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after,
+[data-tooltip]:focus:before,
+[data-tooltip]:focus:after,
+.tooltip:hover:before,
+.tooltip:hover:after,
+.tooltip:focus:before,
+.tooltip:focus:after {
+    visibility: visible;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+}
+
+/* Base styles for the tooltip's directional arrow */
+.tooltip:before,
+[data-tooltip]:before {
+    z-index: 1001;
+    border: 6px solid transparent;
+    background: transparent;
+    content: "";
+}
+
+/* Base styles for the tooltip's content area */
+.tooltip:after,
+[data-tooltip]:after {
+    z-index: 1000;
+    padding: 8px;
+    width: 160px;
+    background-color: #000;
+    background-color: hsla(0, 0%, 20%, 0.9);
+    color: #fff;
+    content: attr(data-tooltip);
+    font-size: 14px;
+    line-height: 1.2;
+}
+
+/* Directions */
+
+/* Top (default) */
+[data-tooltip]:before,
+[data-tooltip]:after,
+.tooltip:before,
+.tooltip:after,
+.tooltip-top:before,
+.tooltip-top:after {
+    bottom: 100%;
+    left: 50%;
+}
+
+[data-tooltip]:before,
+.tooltip:before,
+.tooltip-top:before {
+    margin-left: -6px;
+    margin-bottom: -12px;
+    border-top-color: #000;
+    border-top-color: hsla(0, 0%, 20%, 0.9);
+}
+
+/* Horizontally align top/bottom tooltips */
+[data-tooltip]:after,
+.tooltip:after,
+.tooltip-top:after {
+    margin-left: -80px;
+}
+
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after,
+[data-tooltip]:focus:before,
+[data-tooltip]:focus:after,
+.tooltip:hover:before,
+.tooltip:hover:after,
+.tooltip:focus:before,
+.tooltip:focus:after,
+.tooltip-top:hover:before,
+.tooltip-top:hover:after,
+.tooltip-top:focus:before,
+.tooltip-top:focus:after {
+    -webkit-transform: translateY(-12px);
+    -moz-transform:    translateY(-12px);
+    transform:         translateY(-12px);
+}
+
+/* Left */
+.tooltip-left:before,
+.tooltip-left:after {
+    right: 100%;
+    bottom: 50%;
+    left: auto;
+}
+
+.tooltip-left:before {
+    margin-left: 0;
+    margin-right: -12px;
+    margin-bottom: 0;
+    border-top-color: transparent;
+    border-left-color: #000;
+    border-left-color: hsla(0, 0%, 20%, 0.9);
+}
+
+.tooltip-left:hover:before,
+.tooltip-left:hover:after,
+.tooltip-left:focus:before,
+.tooltip-left:focus:after {
+    -webkit-transform: translateX(-12px);
+    -moz-transform:    translateX(-12px);
+    transform:         translateX(-12px);
+}
+
+/* Bottom */
+.tooltip-bottom:before,
+.tooltip-bottom:after {
+    top: 100%;
+    bottom: auto;
+    left: 50%;
+}
+
+.tooltip-bottom:before {
+    margin-top: -12px;
+    margin-bottom: 0;
+    border-top-color: transparent;
+    border-bottom-color: #000;
+    border-bottom-color: hsla(0, 0%, 20%, 0.9);
+}
+
+.tooltip-bottom:hover:before,
+.tooltip-bottom:hover:after,
+.tooltip-bottom:focus:before,
+.tooltip-bottom:focus:after {
+    -webkit-transform: translateY(12px);
+    -moz-transform:    translateY(12px);
+    transform:         translateY(12px);
+}
+
+/* Right */
+.tooltip-right:before,
+.tooltip-right:after {
+    bottom: 50%;
+    left: 100%;
+}
+
+.tooltip-right:before {
+    margin-bottom: -6px;
+    margin-left: -12px;
+    border-top-color: transparent;
+    border-right-color: #000;
+    border-right-color: hsla(0, 0%, 20%, 0.9);
+}
+
+.tooltip-right:hover:before,
+.tooltip-right:hover:after,
+.tooltip-right:focus:before,
+.tooltip-right:focus:after {
+    -webkit-transform: translateX(12px);
+    -moz-transform:    translateX(12px);
+    transform:         translateX(12px);
+}
+
+/* Vertically center tooltip content for left/right tooltips */
+.tooltip-left:after,
+.tooltip-right:after {
+    margin-left: 0;
+    margin-bottom: -16px;
 }
