--- a/ui/css/rotkehlchen.css
+++ b/ui/css/rotkehlchen.css
@@ -227,14 +227,17 @@ a:focus, a:hover {
     flex-grow: 1;
 }
 
-.notification .icon {
+.notification .icons {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     color: #757575;
-    margin-right: 8px;
     padding-left: 4px;
+}
+
+.notification .icons .icon {
+    margin-bottom: 40px;
 }
 
 .notifications .badge {
