--- a/ui/css/rotkehlchen.css
+++ b/ui/css/rotkehlchen.css
@@ -38,6 +38,11 @@ body.loading {
     height: 50px;
 }
 
+.importdata-button {
+    box-shadow: 2px 1px 2px 2px;
+    cursor: pointer;
+}
+
 td.details-control {
     text-align: center;
     color: forestgreen;
